         Fix Bug 16828: WebView never paints if first page load is canceled after being committed but before layout

<http://bugs.webkit.org/show_bug.cgi?id=16828>
         <rdar://5682402>

         Now that we have 1) a real loader and 2) multiple FrameViews per
         Frame, we no longer need the hackery we had in our WM_PAINT handler
         that decided whether or not to paint. We now always want to paint,
         letting the swapping of FrameViews that happens in
         transitionToCommittedForNewPage handle which document gets painted.

         Reviewed by Hyatt.

         * WebView.cpp:
         (WebViewWndProc): Removed hackery that decided sometimes not to paint.


Canonical link: https://commits.webkit.org/23248@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29415 268f45cc-cd09-0410-ab3c-d52691b4dbfc